[package]
name = "TicketServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-web = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
#mongodb = "2.3.0"
#redis = "0.22"
rusqlite = "0.28"